--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-token: "ze9SVSi6SnTlhD3M"    # lichess OAuth2 Token, with 'play as a bot' enabled 
+token: "F2HC5PwVhHDLJ1Zk"    # lichess OAuth2 Token, with 'play as a bot' enabled 
 url: "https://lichess.org/"  # lichess base URL, do not change this
 
 engine:                      # engine settings
@@ -26,7 +26,7 @@ engine:                      # engine settings
 # engine_options:            # any custom command line params to pass to the engine
 #   cpuct: 3.1
   uci_options:               # arbitrary UCI options passed to the engine
-    Move Overhead: 100       # increase if your bot flags games too often
+    Move Overhead: 110       # increase if your bot flags games too often
     Ponder: true
     Threads: 2               # max CPU threads the engine can use
     Hash: 128                # max memory (in megabytes) the engine can allocate
@@ -46,29 +46,29 @@ engine:                      # engine settings
 
 abort_time: 20               # time to abort a game in seconds when there is no activity
 fake_think_time: false       # artificially slow down the bot to pretend like it's thinking
-move_overhead: 100           # increase if your bot flags games too often
+move_overhead: 110           # increase if your bot flags games too often
 
 challenge:                   # incoming challenges
   concurrency: 1             # number of games to play simultaneously
-  sort_by: "first"           # possible values: "best", "first"
-  accept_bot: true           # accepts challenges coming from other bots
+  sort_by: "best"           # possible values: "best", "first"
+  accept_bot: false           # accepts challenges coming from other bots
   max_increment: 180         # maximum amount of increment to accaept a challenge. the max is 180. set to 0 for no increment
   min_increment: 0           # minimum amount of increment to accept a challenge
   variants:                  # chess variants to accept (http://lichess.org/variant)
     - standard
-#   - fromPosition
-#   - antichess
-#   - atomic
-#   - chess960
-#   - crazyhouse
-#   - horde
-#   - kingOfTheHill
-#   - racingKings
-#   - threeCheck
+    - fromPosition
+    - antichess
+    - atomic
+    - chess960
+    - crazyhouse
+    - horde
+    - kingOfTheHill
+    - racingKings
+    - threeCheck
   time_controls:             # time controls to accept
     - bullet
     - blitz
-#   - rapid
+    - rapid
 #   - classical
 #   - correspondence
   modes:                     # game modes to accept
